@@ -76,6 +76,7 @@ Version 1.5.6+svn:
        pixels with non-zero alpha value to have it increased.
      * ~BL(radius): blur an image by the given radius.
    * Added the transparent version of Kitty's portraits.
+   * Rewrote the drawing engine for the new widgets.
  * Language and i18n:
    * Renamed the --dummylocales parameter to --dummy-locales.
    * Fixed the po extraction tool to also include the id field.
